# Hackathon-2-Todo-app-

./: .gitignore  README.md
phase-02/: CLAUDE.md
phase-03/: CLAUDE.md  IMPLEMENTATION_COMPLETE.md  create_better_auth_schema.py  run_migrations.py
phase-1/: .gitignore  README.md  pyproject.toml  test_validation.py  validation_test.py
phase-1/.specify/memory/: constitution.md
phase-1/specs/1-console-todo-app/: spec.md  tasks.md
phase-1/specs/1-console-todo-app/checklists/: requirements.md
phase-1/specs/1-console-todo-app/planning/: data-model.md  impl-plan.md  quickstart.md  research.md
phase-1/specs/1-console-todo-app/planning/contracts/: todo-api-contract.md
phase-1/specs/2-enhanced-todo-org/: spec.md  tasks.md
phase-1/specs/2-enhanced-todo-org/checklists/: requirements.md
phase-1/specs/2-enhanced-todo-org/planning/: data-model.md  impl-plan.md  quickstart.md  research.md
phase-1/specs/3-intelligent-todo-features/: spec.md  tasks.md
phase-1/specs/3-intelligent-todo-features/checklists/: requirements.md
phase-1/specs/3-intelligent-todo-features/planning/: data-model.md  impl-plan.md
phase-1/specs/4-overdue-remind-logic/: spec.md  tasks.md
phase-1/specs/4-overdue-remind-logic/checklists/: requirements.md
phase-1/specs/4-overdue-remind-logic/planning/: impl-plan.md  quickstart.md  research.md
phase-1/src/: main.py
phase-3/: .gitignore  FINAL_SUMMARY.md  IMPLEMENTATION_STATUS.md  IMPLEMENTATION_SUMMARY.md  MCP_TESTING_GUIDE.md  QUICKSTART.md  QUICK_TEST.md  TESTING_GUIDE.md  VALIDATION_REPORT.md  check_db.py  create_test_tasks.py  (+2 more)
(+324 files in other folders)
